--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b main"
   },
   "license": "0BSD",
   "dependencies": {
@@ -15,5 +16,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "theme-ui": "0.11.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
